--- a/package.json
+++ b/package.json
@@ -73,6 +73,11 @@
         "vite": "^5.4.0",
         "vitest": "^1.6.0"
     },
+    "pnpm": {
+        "overrides": {
+            "rollup": "^4.22.4"
+        }
+    },
     "type": "module",
     "packageManager": "pnpm@9.7.0+sha512.dc09430156b427f5ecfc79888899e1c39d2d690f004be70e05230b72cb173d96839587545d09429b55ac3c429c801b4dc3c0e002f653830a420fa2dd4e3cf9cf"
 }
