--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "e2e:ui": "playwright test tests/e2e --ui"
     },
     "dependencies": {
-        "@appwrite.io/console": "^1.3.2",
+        "@appwrite.io/console": "1.3.2",
         "@appwrite.io/pink": "0.25.0",
         "@appwrite.io/pink-icons": "0.25.0",
         "@popperjs/core": "^2.11.8",
@@ -44,7 +44,7 @@
         "@melt-ui/svelte": "^0.83.0",
         "@playwright/test": "^1.48.0",
         "@sveltejs/adapter-static": "^3.0.5",
-        "@sveltejs/kit": "^2.6.3",
+        "@sveltejs/kit": "^2.6.4",
         "@sveltejs/vite-plugin-svelte": "^3.1.2",
         "@testing-library/dom": "^10.4.0",
         "@testing-library/jest-dom": "^6.5.0",
@@ -69,7 +69,7 @@
         "svelte-preprocess": "^6.0.3",
         "svelte-sequential-preprocessor": "^2.0.2",
         "tslib": "^2.7.0",
-        "typescript": "^5.6.2",
+        "typescript": "^5.6.3",
         "vite": "^5.4.8",
         "vitest": "^1.6.0"
     },
