--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "@appwrite.io/pink": "0.25.0",
         "@appwrite.io/pink-icons": "0.25.0",
         "@appwrite.io/pink-icons-svelte": "1.0.0-next.5",
-        "@appwrite.io/pink-svelte": "1.0.0-next.54",
+        "@appwrite.io/pink-svelte": "1.0.0-next.60",
         "@popperjs/core": "^2.11.8",
         "@sentry/sveltekit": "^8.33.1",
         "@stripe/stripe-js": "^3.5.0",
@@ -65,6 +65,7 @@
         "prettier": "^3.3.3",
         "prettier-plugin-svelte": "^3.2.7",
         "sass": "^1.79.4",
+        "shiki": "^1.22.0",
         "svelte": "^4.2.19",
         "svelte-check": "^3.8.6",
         "svelte-jester": "^2.3.2",
