--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "@appwrite.io/pink": "0.25.0",
         "@appwrite.io/pink-icons": "0.25.0",
         "@appwrite.io/pink-icons-svelte": "1.0.0-next.7",
-        "@appwrite.io/pink-svelte": "https://pkg.pr.new/appwrite/pink/@appwrite.io/pink-svelte@dbeda91",
+        "@appwrite.io/pink-svelte": "https://pkg.pr.new/appwrite/pink/@appwrite.io/pink-svelte@69695cf",
         "@popperjs/core": "^2.11.8",
         "@sentry/sveltekit": "^8.38.0",
         "@stripe/stripe-js": "^3.5.0",
@@ -34,6 +34,7 @@
         "deep-equal": "^2.2.3",
         "echarts": "^5.5.1",
         "envfile": "^7.1.0",
+        "ignore": "^6.0.2",
         "nanoid": "^5.0.8",
         "nanotar": "^0.1.1",
         "plausible-tracker": "^0.3.9",
