--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     },
     "dependencies": {
         "@appwrite.io/console": "https://pkg.pr.new/appwrite/appwrite/@appwrite.io/console@70f1b0c",
-        "@appwrite.io/pink": "0.25.0",
         "@appwrite.io/pink-icons": "0.25.0",
         "@appwrite.io/pink-icons-svelte": "https://pkg.pr.new/appwrite/pink/@appwrite.io/pink-icons-svelte@192",
+        "@appwrite.io/pink-legacy": "^1.0.0",
         "@appwrite.io/pink-svelte": "https://pkg.pr.new/appwrite/pink/@appwrite.io/pink-svelte@192",
         "@popperjs/core": "^2.11.8",
         "@sentry/sveltekit": "^8.38.0",
