--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,6 +25,8 @@ jobs:
               run: pnpm audit --audit-level high
             - name: Install dependencies
               run: pnpm install --frozen-lockfile
+            - name: Run sync
+              run: pnpm run sync
             - name: Svelte Diagnostics
               run: pnpm run check
             - name: Linter
