--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "@appwrite.io/console": "https://pkg.pr.new/appwrite/appwrite/@appwrite.io/console@08ec153",
         "@appwrite.io/pink-icons": "0.25.0",
         "@appwrite.io/pink-icons-svelte": "https://pkg.pr.new/appwrite/pink/@appwrite.io/pink-icons-svelte@67808bca",
-        "@appwrite.io/pink-legacy": "^1.0.1",
+        "@appwrite.io/pink-legacy": "^1.0.2",
         "@appwrite.io/pink-svelte": "https://pkg.pr.new/appwrite/pink/@appwrite.io/pink-svelte@67808bca",
         "@popperjs/core": "^2.11.8",
         "@sentry/sveltekit": "^8.38.0",
@@ -80,5 +80,10 @@
         "vitest": "^1.6.0"
     },
     "type": "module",
-    "packageManager": "pnpm@10.4.1"
+    "packageManager": "pnpm@10.4.1",
+    "pnpm": {
+        "overrides": {
+            "@appwrite.io/pink-svelte": "link:../../../../Library/pnpm/global/5/node_modules/@appwrite.io/pink-svelte"
+        }
+    }
 }
