Remove locally linked dep

--- a/package.json
+++ b/package.json
@@ -80,10 +80,5 @@
         "vitest": "^1.6.0"
     },
     "type": "module",
-    "packageManager": "pnpm@10.4.1",
-    "pnpm": {
-        "overrides": {
-            "pink-svelte": "link:../../../Library/pnpm/global/5/node_modules/@appwrite.io/pink-svelte"
-        }
-    }
+    "packageManager": "pnpm@10.4.1"
 }
